BUGFIX: Choice button wrapping

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_KeyVisual.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_KeyVisual.scss
@@ -29,12 +29,9 @@
     }
   }
 
-  &--contentOnly {
-    .keyVisual__content {
-
-      &:first-child {
-        padding-top: $header-height--medium;
-      }
+  .keyVisual {
+    &:first-child {
+      padding-top: $header-height--medium;
     }
   }
 }
